# bioai-esol-platform

./: .gitignore  README.md  pyproject.toml  requirements.txt  train.py
configs/: config.yaml
documentation/: hyperpara-sweeps_metric-analysis.md
src/bioai_esol/evaluation/: metrics.py
src/bioai_esol/mlops/: promote_model.py
src/bioai_esol/models/: gcn.py
src/bioai_esol/training/: trainer.py
src/bioai_esol/utils/: config.py  seed.py
