[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bioai-esol"
version = "0.1.0"
description = "Graph neural network pipeline for ESOL solubility prediction"
authors = [
    {name = "Nishka Khendry"}
]
requires-python = ">=3.9"

dependencies = [
    "torch",
    "torch-geometric",
    "numpy",
    "pandas",
    "scikit-learn",
    "mlflow",
    "boto3"
]

[tool.setuptools.packages.find]
where = ["src"]